--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </div>
             <div class="info">
                 <h1>Osama</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eu lobortis elementum nibh tellus molestie nunc non blandit. Morbi enim nunc faucibus a pellentesque sit. Massa vitae tortor condimentum lacinia quis.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eu lobortis elementum nibh tellus molestie nunc non blandit. Morbi enim nunc faucibus a pellentesque sit. Massa vitae tortor condimentum lacinia quis. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quam adipiscing vitae proin sagittis nisl rhoncus mattis rhoncus urna.</p>
             </div>
         </article>
         <hr>
@@ -71,7 +71,7 @@
             </div>
             <div class="info">
                 <h1>Ishaq</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eu lobortis elementum nibh tellus molestie nunc non blandit. Morbi enim nunc faucibus a pellentesque sit. Massa vitae tortor condimentum lacinia quis.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eu lobortis elementum nibh tellus molestie nunc non blandit. Morbi enim nunc faucibus a pellentesque sit. Massa vitae tortor condimentum lacinia quis. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quam adipiscing vitae proin sagittis nisl rhoncus mattis rhoncus urna.</p>
             </div>
         </article>
         <hr>
@@ -81,12 +81,12 @@
             </div>
             <div class="info">
                 <h1>Mariam</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eu lobortis elementum nibh tellus molestie nunc non blandit. Morbi enim nunc faucibus a pellentesque sit. Massa vitae tortor condimentum lacinia quis.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eu lobortis elementum nibh tellus molestie nunc non blandit. Morbi enim nunc faucibus a pellentesque sit. Massa vitae tortor condimentum lacinia quis. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quam adipiscing vitae proin sagittis nisl rhoncus mattis rhoncus urna.</p>
             </div>
         </article>
+        <hr>
     </main>
     <footer>
-        <hr>
         <article class="flex">
             <div class="social">
                 <img src="./images/logo/scuba-logo.svg" alt="logo" class="logo">
