--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AJouhari</title>
-    <link rel="icon" type="image/x-icon" href="./images/logo/scuba-logo.svg"/>
+    <link rel="icon" type="image/x-icon" href="./images/logo/logo-main.svg"/>
     <link rel="stylesheet" href="./assets/css/main.css" type="text/css">
 </head>
 <body>
@@ -33,7 +33,7 @@
                 <li class="menu-item"><a href="#">Location</a></li>
             </ul>
             <div class="content-container">
-                <img src="./images/logo/scuba-logo.svg" alt="">
+                <img src="./images/logo/logo-short.svg" alt="">
                 <ul class="row-listed">
                     <li><a href="#">About</a></li>
                     <li><a href="#">Equiptment</a></li>
@@ -89,7 +89,7 @@
     <footer>
         <article class="flex">
             <div class="social">
-                <img src="./images/logo/scuba-logo.svg" alt="logo" class="logo">
+                <img src="./images/logo/logo-extended.svg" alt="logo" class="logo">
                 <icons class="flex">
                     <a href=""><img src="./images/icons/snapchat.svg"></a>
                     <a href=""><img src="./images/icons/instagram.svg"></a>
