--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AJouhari</title>
+    <title>Dive JFS</title>
     <link rel="icon" type="image/x-icon" href="./images/logo/logo-main.svg"/>
     <link rel="stylesheet" href="./assets/css/main.css" type="text/css">
 </head>
