--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
             <ul class="menu">
                 <li class="menu-item"><a href="#">About</a></li>
-                <li class="menu-item"><a href="#">Equiptment</a></li>
+                <li class="menu-item"><a href="#">Equipment</a></li>
                 <li class="menu-item"><a href="#">Courses</a></li>
                 <li class="menu-item"><a href="#">Boat Trips</a></li>
                 <li class="menu-item"><a href="#">Location</a></li>
@@ -36,7 +36,7 @@
                 <img src="./images/logo/logo-short.svg" alt="">
                 <ul class="row-listed">
                     <li><a href="#">About</a></li>
-                    <li><a href="#">Equiptment</a></li>
+                    <li><a href="#">Equipment</a></li>
                     <li><a href="#">Courses</a></li>
                     <li><a href="#">Boat Trips</a></li>
                     <li><a href="#">Location</a></li>
@@ -46,7 +46,7 @@
         <section class="banner" style="background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(./images/icons/ocean.jpg);">
             <article class="text">
                 <h1>Jeddah Freediving</h1>
-                <span class="text-type" data-wait="1500" data-words='["Quality equiptment", "Awesome insructors", "What are you waiting for?"]'></span>
+                <span class="text-type" data-wait="1500" data-words='["Quality equipment", "Awesome insructors", "What are you waiting for!"]'></span>
                 <div class="buttons">
                     <button onclick="location.href='#'" type="button"><span>Equiptment</span></button>
                     <button onclick="location.href='#'" type="button"><span>Classes</span></button>
@@ -100,7 +100,7 @@
                 <h2>Quick Links:</h2>
                 <nav class="flex">
                     <li><a href="#">About</a></li>
-                    <li><a href="#">Equiptment</a></li>
+                    <li><a href="#">Equipment</a></li>
                     <li><a href="#">Courses</a></li>
                     <li><a href="#">Boat Trips</a></li>
                     <li><a href="#">Location</a></li>
@@ -108,7 +108,7 @@
             </div>
             <div class="contact">
                 <h2>Contact:</h2>
-                <p>FLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Adipiscing vitae proin sagittis nisl. Tortor condimentum lacinia quis vel eros donec ac odio tempor. Urna condimentum mattis pellentesque id nibh tortor id.<br><br>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Adipiscing vitae proin sagittis nisl. Tortor condimentum lacinia quis vel eros donec ac odio tempor. Urna condimentum mattis pellentesque id nibh tortor id.<br><br>
                     Inquires: services@example.com <br>
                     Support: support@example.com</p>
             </div>
