--- a/pages/header.html
+++ b/pages/header.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dive JFS</title>
-  <link rel="icon" type="image/x-icon" href="./images/logo/logo-main.svg"/>
+  <link rel="icon" type="image/x-icon" href="../images/logo/logo-main.svg"/>
   <link rel="stylesheet" href="../assets/css/main.css" type="text/css">
 </head>
 <body>
