--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv='refresh' content='0; URL=./pages/home.html'>
+    <title>Dive JFS</title>
+    <link rel="icon" type="image/x-icon" href="./images/logo/logo-main.svg"/>
+    <link rel="stylesheet" href="./assets/css/main.css" type="text/css">
 </head>
 <body>
     <div class="fullpage-loader">
@@ -59,7 +61,7 @@
             </div>
             <div class="info">
                 <h1>Osama</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eu lobortis elementum nibh tellus molestie nunc non blandit. Morbi enim nunc faucibus a pellentesque sit. Massa vitae tortor condimentum lacinia quis. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quam adipiscing vitae proin sagittis nisl rhoncus mattis rhoncus urna.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eu lobortis elementum nibh tellus molestie nunc non blandit. Morbi enim nunc faucibus a pellentesque sit. Massa vitae tortor condimentum lacinia quis. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quam adipiscing vitae proin sagittis adipiscing nisl rhoncus mattis rhoncus urna.</p>
             </div>
         </article>
         <hr>
@@ -69,7 +71,7 @@
             </div>
             <div class="info">
                 <h1>Ishaq</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eu lobortis elementum nibh tellus molestie nunc non blandit. Morbi enim nunc faucibus a pellentesque sit. Massa vitae tortor condimentum lacinia quis. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quam adipiscing vitae proin sagittis nisl rhoncus mattis rhoncus urna.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eu lobortis elementum nibh tellus molestie nunc non blandit. Morbi enim nunc faucibus a pellentesque sit. Massa vitae tortor condimentum lacinia quis. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quam adipiscing vitae proin sagittis adipiscing nisl rhoncus mattis rhoncus urna.</p>
             </div>
         </article>
         <hr>
@@ -79,7 +81,7 @@
             </div>
             <div class="info">
                 <h1>Mariam</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eu lobortis elementum nibh tellus molestie nunc non blandit. Morbi enim nunc faucibus a pellentesque sit. Massa vitae tortor condimentum lacinia quis. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quam adipiscing vitae proin sagittis nisl rhoncus mattis rhoncus urna.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eu lobortis elementum nibh tellus molestie nunc non blandit. Morbi enim nunc faucibus a pellentesque sit. Massa vitae tortor condimentum lacinia quis. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quam adipiscing vitae proin sagittis adipiscing nisl rhoncus mattis rhoncus urna.</p>
             </div>
         </article>
         <hr>
