changed-class-naming

--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
         </div>
     </div>
     <header>
+        <!-- Navigation -->
         <div class="top-navigation">
             <div class="burger-container">
                 <div id="burger">
-                  <div class="bar topBar"></div>
-                  <div class="bar btmBar"></div>
+                <div class="bar topBar"></div>
+                <div class="bar btmBar"></div>
                 </div>
             </div>
             <ul class="menu">
@@ -32,7 +33,7 @@
                 <li class="menu-item"><a href="#">Boat Trips</a></li>
                 <li class="menu-item"><a href="#">Location</a></li>
             </ul>
-            <div class="content-container">
+            <div class="menu-row">
                 <img src="./images/logo/logo-short.svg" alt="">
                 <ul class="row-listed">
                     <li><a href="#">About</a></li>
@@ -43,6 +44,7 @@
                 </ul>
             </div>
         </div>
+        <!-- Banner -->
         <section class="banner" style="background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(./images/icons/ocean.jpg);">
             <article class="text">
                 <h1>Jeddah Freediving</h1>
@@ -55,6 +57,7 @@
         </section>
     </header>
     <main>
+        <!-- About athletes -->
         <article class="hidden">
             <div class="icon">
                 <img src="./images/personal/osama.png" alt="Osama">
@@ -87,6 +90,7 @@
         <hr>
     </main>
     <footer>
+        <!-- Icon and social media links -->
         <article class="flex">
             <div class="social">
                 <img src="./images/logo/logo-extended.svg" alt="logo" class="logo">
@@ -96,6 +100,7 @@
                     <a href=""><img src="./images/icons/twitter.svg"></a>
                 </icons>
             </div>
+            <!-- Footer navigation -->
             <div class="navigation">
                 <h2>Quick Links:</h2>
                 <nav class="flex">
@@ -106,6 +111,7 @@
                     <li><a href="#">Location</a></li>
                 </nav>
             </div>
+            <!-- Footer contact information -->
             <div class="contact">
                 <h2>Contact:</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Adipiscing vitae proin sagittis nisl. Tortor condimentum lacinia quis vel eros donec ac odio tempor. Urna condimentum mattis pellentesque id nibh tortor id.<br><br>
