standardized-navigation-sizing

--- a/index.html
+++ b/index.html
@@ -19,29 +19,31 @@
     </div>
     <header>
         <!-- Navigation -->
-        <div class="top-navigation">
-            <div class="burger-container">
-                <div id="burger">
-                <div class="bar topBar"></div>
-                <div class="bar btmBar"></div>
+        <div class="top-navigation-background">
+            <div class="top-navigation">
+                <div class="burger-container">
+                    <div id="burger">
+                    <div class="bar topBar"></div>
+                    <div class="bar btmBar"></div>
+                    </div>
                 </div>
-            </div>
-            <ul class="menu">
-                <li class="menu-item"><a href="#">About</a></li>
-                <li class="menu-item"><a href="#">Equipment</a></li>
-                <li class="menu-item"><a href="#">Courses</a></li>
-                <li class="menu-item"><a href="#">Boat Trips</a></li>
-                <li class="menu-item"><a href="#">Location</a></li>
-            </ul>
-            <div class="menu-row">
-                <img src="./images/logo/logo-short.svg" alt="">
-                <ul class="row-listed">
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Equipment</a></li>
-                    <li><a href="#">Courses</a></li>
-                    <li><a href="#">Boat Trips</a></li>
-                    <li><a href="#">Location</a></li>
+                <ul class="menu">
+                    <li class="menu-item"><a href="#">About</a></li>
+                    <li class="menu-item"><a href="#">Equipment</a></li>
+                    <li class="menu-item"><a href="#">Courses</a></li>
+                    <li class="menu-item"><a href="#">Boat Trips</a></li>
+                    <li class="menu-item"><a href="#">Location</a></li>
                 </ul>
+                <div class="menu-row">
+                    <img src="./images/logo/logo-short.svg" alt="">
+                    <ul class="row-listed">
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Equipment</a></li>
+                        <li><a href="#">Courses</a></li>
+                        <li><a href="#">Boat Trips</a></li>
+                        <li><a href="#">Location</a></li>
+                    </ul>
+                </div>
             </div>
         </div>
         <!-- Banner -->
