--- a/equipment.html
+++ b/equipment.html
@@ -30,7 +30,7 @@
                 </div>
                 <ul class="menu">
                     <li class="menu-item"><a href="#">About</a></li>
-                    <li class="menu-item"><a href="./equipment.html">Equipment</a></li>
+                    <li class="menu-item"><a href="#">Equipment</a></li>
                     <li class="menu-item"><a href="#">Courses</a></li>
                     <li class="menu-item"><a href="#">Boat Trips</a></li>
                     <li class="menu-item"><a href="#">Location</a></li>
@@ -39,7 +39,7 @@
                     <a href="./index.html"><img src="./images/logo/logo-short.svg" alt=""></a>
                     <ul class="row-listed">
                         <li><a href="#">About</a></li>
-                        <li><a href="./equipment.html">Equipment</a></li>
+                        <li><a href="#">Equipment</a></li>
                         <li><a href="#">Courses</a></li>
                         <li><a href="#">Boat Trips</a></li>
                         <li><a href="#">Location</a></li>
@@ -48,49 +48,56 @@
             </div>
         </div>
         <!-- Banner -->
-        <section class="banner" style="background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(./images/icons/ocean.jpg);">
+        <section class="banner short" style="background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(./images/icons/scuba-diver.jpg);">
             <article class="text">
-                <h1>Jeddah Freediving</h1>
-                <span class="text-type" data-wait="1500" data-words='["Quality equipment", "Awesome insructors", "What are you waiting for!"]'></span>
-                <div class="buttons">
-                    <button onclick="location.href='#'" type="button"><span>Equiptment</span></button>
-                    <button onclick="location.href='#'" type="button"><span>Classes</span></button>
-                </div>
+                <h1>Bifins</h1>
             </article>
         </section>
     </header>
     <main>
-        <!-- About athletes -->
-        <article class="athletes hidden">
-            <div class="icon">
-                <img src="./images/personal/osama.png" alt="Osama">
-            </div>
-            <div class="info">
-                <h1>Osama</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eu lobortis elementum nibh tellus molestie nunc non blandit. Morbi enim nunc faucibus a pellentesque sit. Massa vitae tortor condimentum lacinia quis. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quam adipiscing vitae proin sagittis adipiscing nisl rhoncus mattis rhoncus urna.</p>
-            </div>
-        </article>
-        <hr>
-        <article class="athletes hidden">
-            <div class="icon">
-                <img src="./images/personal/ishaq.png" alt="Ishaq">
-            </div>
-            <div class="info">
-                <h1>Ishaq</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eu lobortis elementum nibh tellus molestie nunc non blandit. Morbi enim nunc faucibus a pellentesque sit. Massa vitae tortor condimentum lacinia quis. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quam adipiscing vitae proin sagittis adipiscing nisl rhoncus mattis rhoncus urna.</p>
-            </div>
-        </article>
-        <hr>
-        <article class="athletes hidden">
-            <div class="icon">
-                <img src="./images/personal/mariam.png" alt="Mariam">
-            </div>
-            <div class="info">
-                <h1>Mariam</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eu lobortis elementum nibh tellus molestie nunc non blandit. Morbi enim nunc faucibus a pellentesque sit. Massa vitae tortor condimentum lacinia quis. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quam adipiscing vitae proin sagittis adipiscing nisl rhoncus mattis rhoncus urna.</p>
-            </div>
-        </article>
-        <hr>
+        <!-- Equipment -->
+        <section class="products">
+            <figure class="hidden">
+                <img src="./images/icons/bifin.jpg" alt="">
+                <h2>Bifin</h2>
+                <figcaption>300 SAR</figcaption>
+            </figure>
+            <figure class="hidden">
+                <img src="./images/icons/bifin.jpg" alt="">
+                <h2>Bifin</h2>
+                <figcaption>300 SAR</figcaption>
+            </figure>
+            <figure class="hidden">
+                <img src="./images/icons/bifin.jpg" alt="">
+                <h2>Bifin</h2>
+                <figcaption>300 SAR</figcaption>
+            </figure>
+            <figure class="hidden">
+                <img src="./images/icons/bifin.jpg" alt="">
+                <h2>Bifin</h2>
+                <figcaption>300 SAR</figcaption>
+            </figure>
+            <figure class="hidden">
+                <img src="./images/icons/bifin.jpg" alt="">
+                <h2>Bifin</h2>
+                <figcaption>300 SAR</figcaption>
+            </figure>
+            <figure class="hidden">
+                <img src="./images/icons/bifin.jpg" alt="">
+                <h2>Bifin</h2>
+                <figcaption>300 SAR</figcaption>
+            </figure>
+            <figure class="hidden">
+                <img src="./images/icons/bifin.jpg" alt="">
+                <h2>Bifin</h2>
+                <figcaption>300 SAR</figcaption>
+            </figure>
+            <figure class="hidden">
+                <img src="./images/icons/bifin.jpg" alt="">
+                <h2>Bifin</h2>
+                <figcaption>300 SAR</figcaption>
+            </figure>
+        </section><hr>
     </main>
     <footer>
         <!-- Icon and social media links -->
@@ -108,7 +115,7 @@
                 <h2>Quick Links:</h2>
                 <nav class="flex">
                     <li><a href="#">About</a></li>
-                    <li><a href="./equipment.html">Equipment</a></li>
+                    <li><a href="#">Equipment</a></li>
                     <li><a href="#">Courses</a></li>
                     <li><a href="#">Boat Trips</a></li>
                     <li><a href="#">Location</a></li>
