responsive-equipment-page

--- a/equipment.html
+++ b/equipment.html
@@ -97,6 +97,46 @@
                 <h2>Bifin</h2>
                 <figcaption>300 SAR</figcaption>
             </figure>
+            <figure class="hidden">
+                <img src="./images/icons/bifin.jpg" alt="">
+                <h2>Bifin</h2>
+                <figcaption>300 SAR</figcaption>
+            </figure>
+            <figure class="hidden">
+                <img src="./images/icons/bifin.jpg" alt="">
+                <h2>Bifin</h2>
+                <figcaption>300 SAR</figcaption>
+            </figure>
+            <figure class="hidden">
+                <img src="./images/icons/bifin.jpg" alt="">
+                <h2>Bifin</h2>
+                <figcaption>300 SAR</figcaption>
+            </figure>
+            <figure class="hidden">
+                <img src="./images/icons/bifin.jpg" alt="">
+                <h2>Bifin</h2>
+                <figcaption>300 SAR</figcaption>
+            </figure>
+            <figure class="hidden">
+                <img src="./images/icons/bifin.jpg" alt="">
+                <h2>Bifin</h2>
+                <figcaption>300 SAR</figcaption>
+            </figure>
+            <figure class="hidden">
+                <img src="./images/icons/bifin.jpg" alt="">
+                <h2>Bifin</h2>
+                <figcaption>300 SAR</figcaption>
+            </figure>
+            <figure class="hidden">
+                <img src="./images/icons/bifin.jpg" alt="">
+                <h2>Bifin</h2>
+                <figcaption>300 SAR</figcaption>
+            </figure>
+            <figure class="hidden">
+                <img src="./images/icons/bifin.jpg" alt="">
+                <h2>Bifin</h2>
+                <figcaption>300 SAR</figcaption>
+            </figure>
         </section><hr>
     </main>
     <footer>
