--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
             <div class="top-navigation">
                 <div class="burger-container">
                     <div id="burger">
-                    <div class="bar topBar"></div>
-                    <div class="bar btmBar"></div>
+                        <div class="bar topBar"></div>
+                        <div class="bar btmBar"></div>
                     </div>
                 </div>
                 <ul class="menu">
                     <li class="menu-item"><a href="#">About</a></li>
-                    <li class="menu-item"><a href="./equipment.html">Equipment</a></li>
+                    <li class="menu-item"><a href="#">Equipment</a></li>
                     <li class="menu-item"><a href="#">Courses</a></li>
                     <li class="menu-item"><a href="#">Boat Trips</a></li>
                     <li class="menu-item"><a href="#">Location</a></li>
@@ -90,7 +90,6 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eu lobortis elementum nibh tellus molestie nunc non blandit. Morbi enim nunc faucibus a pellentesque sit. Massa vitae tortor condimentum lacinia quis. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quam adipiscing vitae proin sagittis adipiscing nisl rhoncus mattis rhoncus urna.</p>
             </div>
         </article>
-        <hr>
     </main>
     <footer>
         <!-- Icon and social media links -->
