--- a/equipment.html
+++ b/equipment.html
@@ -56,7 +56,7 @@
     </header>
     <main>
         <div id="myBtnContainer">
-            <button class="btn" onclick="filterSelection('all')"> All</button>
+            <button class="btn active" onclick="filterSelection('all')"> All</button>
             <button class="btn" onclick="filterSelection('goggles')">Goggles</button>
             <button class="btn" onclick="filterSelection('bifins')">Bifins</button>
             <button class="btn" onclick="filterSelection('monofins')">Monofins</button>
