--- a/athletes.html
+++ b/athletes.html
@@ -24,14 +24,14 @@
             <div class="top-navigation">
                 <div class="burger-container">
                     <div id="burger">
-                    <div class="bar topBar"></div>
-                    <div class="bar btmBar"></div>
+                        <div class="bar topBar"></div>
+                        <div class="bar btmBar"></div>
                     </div>
                 </div>
                 <ul class="menu">
                     <li class="menu-item"><a href="./index.html">Home</a></li>
-                    <li class="menu-item"><a href="./athletes.html">Athletes</a></li>
-                    <li class="menu-item"><a href="#">Equipment</a></li>
+                    <li class="menu-item"><a href="#">Athletes</a></li>
+                    <li class="menu-item"><a href="./equipment.html">Equipment</a></li>
                     <li class="menu-item"><a href="#">Courses</a></li>
                     <li class="menu-item"><a href="#">Boat Trips</a></li>
                     <li class="menu-item"><a href="#">Location</a></li>
@@ -40,8 +40,8 @@
                     <a href="./index.html"><img src="./images/logo/logo-short.svg" alt=""></a>
                     <ul class="row-listed">
                         <li><a href="./index.html">Home</a></li>
-                        <li><a href="./athletes.html">Athletes</a></li>
-                        <li><a href="#">Equipment</a></li>
+                        <li><a href="#">Athletes</a></li>
+                        <li><a href="./equipment.html">Equipment</a></li>
                         <li><a href="#">Courses</a></li>
                         <li><a href="#">Boat Trips</a></li>
                         <li><a href="#">Location</a></li>
@@ -52,271 +52,42 @@
         <!-- Banner -->
         <section class="banner short" style="background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(./images/icons/scuba-diver.jpg);">
             <article class="text">
-                <h1>Equipment</h1>
+                <h1>Our Athletes</h1>
+                <span class="text-type" data-wait="1500" data-words='["Osama", "Ishaq", "Mariam"]'></span>
             </article>
         </section>
     </header>
     <main>
-        <div id="myBtnContainer">
-            <button class="btn active" onclick="filterSelection('all')"> All</button>
-            <button class="btn" onclick="filterSelection('goggles')">Goggles</button>
-            <button class="btn" onclick="filterSelection('bifins')">Bifins</button>
-            <button class="btn" onclick="filterSelection('monofins')">Monofins</button>
-            <button class="btn" onclick="filterSelection('accessories')">Accessories</button>
-        </div>
-        <!-- Equipment -->
-        <section class="products container">
-            <figure class="hidden filterDiv bifins">
-                <div class="flex">
-                    <img src="./images/icons/bifin.png" alt="">
-                </div>
-                <div class="info">
-                    <hr>
-                    <h2>Bifin</h2>
-                    <figcaption>300 SAR</figcaption>
-                </div>
-            </figure>
-            <figure class="hidden filterDiv bifins">
-                <div class="flex">
-                    <img src="./images/icons/bifin.png" alt="">
-                </div>
-                <div class="info">
-                    <hr>
-                    <h2>Bifin</h2>
-                    <figcaption>300 SAR</figcaption>
-                </div>
-            </figure>
-            <figure class="hidden filterDiv bifins">
-                <div class="flex">
-                    <img src="./images/icons/bifin.png" alt="">
-                </div>
-                <div class="info">
-                    <hr>
-                    <h2>Bifin</h2>
-                    <figcaption>300 SAR</figcaption>
-                </div>
-            </figure>
-            <figure class="hidden filterDiv bifins">
-                <div class="flex">
-                    <img src="./images/icons/bifin.png" alt="">
-                </div>
-                <div class="info">
-                    <hr>
-                    <h2>Bifin</h2>
-                    <figcaption>300 SAR</figcaption>
-                </div>
-            </figure>
-            <figure class="hidden filterDiv bifins">
-                <div class="flex">
-                    <img src="./images/icons/bifin.png" alt="">
-                </div>
-                <div class="info">
-                    <hr>
-                    <h2>Bifin</h2>
-                    <figcaption>300 SAR</figcaption>
-                </div>
-            </figure>
-            <figure class="hidden filterDiv bifins">
-                <div class="flex">
-                    <img src="./images/icons/bifin.png" alt="">
-                </div>
-                <div class="info">
-                    <hr>
-                    <h2>Bifin</h2>
-                    <figcaption>300 SAR</figcaption>
-                </div>
-            </figure>
-            <figure class="hidden filterDiv monofins">
-                <div class="flex">
-                    <img src="./images/icons/monofin.png" alt="">
-                </div>
-                <div class="info">
-                    <hr>
-                    <h2>Monofin</h2>
-                    <figcaption>300 SAR</figcaption>
-                </div>
-            </figure>
-            <figure class="hidden filterDiv monofins">
-                <div class="flex">
-                    <img src="./images/icons/monofin.png" alt="">
-                </div>
-                <div class="info">
-                    <hr>
-                    <h2>Monofin</h2>
-                    <figcaption>300 SAR</figcaption>
-                </div>
-            </figure>
-            <figure class="hidden filterDiv monofins">
-                <div class="flex">
-                    <img src="./images/icons/monofin.png" alt="">
-                </div>
-                <div class="info">
-                    <hr>
-                    <h2>Monofin</h2>
-                    <figcaption>300 SAR</figcaption>
-                </div>
-            </figure>
-            <figure class="hidden filterDiv monofins">
-                <div class="flex">
-                    <img src="./images/icons/monofin.png" alt="">
-                </div>
-                <div class="info">
-                    <hr>
-                    <h2>Monofin</h2>
-                    <figcaption>300 SAR</figcaption>
-                </div>
-            </figure>
-            <figure class="hidden filterDiv monofins">
-                <div class="flex">
-                    <img src="./images/icons/monofin.png" alt="">
-                </div>
-                <div class="info">
-                    <hr>
-                    <h2>Monofin</h2>
-                    <figcaption>300 SAR</figcaption>
-                </div>
-            </figure>
-            <figure class="hidden filterDiv goggles">
-                <div class="flex">
-                    <img src="./images/icons/goggles.png" alt="">
-                </div>
-                <div class="info">
-                    <hr>
-                    <h2>Goggles</h2>
-                    <figcaption>300 SAR</figcaption>
-                </div>
-            </figure>
-            <figure class="hidden filterDiv goggles">
-                <div class="flex">
-                    <img src="./images/icons/goggles.png" alt="">
-                </div>
-                <div class="info">
-                    <hr>
-                    <h2>Goggles</h2>
-                    <figcaption>300 SAR</figcaption>
-                </div>
-            </figure>
-            <figure class="hidden filterDiv goggles">
-                <div class="flex">
-                    <img src="./images/icons/goggles.png" alt="">
-                </div>
-                <div class="info">
-                    <hr>
-                    <h2>Goggles</h2>
-                    <figcaption>300 SAR</figcaption>
-                </div>
-            </figure>
-            <figure class="hidden filterDiv goggles">
-                <div class="flex">
-                    <img src="./images/icons/goggles.png" alt="">
-                </div>
-                <div class="info">
-                    <hr>
-                    <h2>Goggles</h2>
-                    <figcaption>300 SAR</figcaption>
-                </div>
-            </figure>
-            <figure class="hidden filterDiv goggles">
-                <div class="flex">
-                    <img src="./images/icons/goggles.png" alt="">
-                </div>
-                <div class="info">
-                    <hr>
-                    <h2>Goggles</h2>
-                    <figcaption>300 SAR</figcaption>
-                </div>
-            </figure>
-            <figure class="hidden filterDiv goggles">
-                <div class="flex">
-                    <img src="./images/icons/goggles.png" alt="">
-                </div>
-                <div class="info">
-                    <hr>
-                    <h2>Goggles</h2>
-                    <figcaption>300 SAR</figcaption>
-                </div>
-            </figure>
-            <figure class="hidden filterDiv accessories">
-                <div class="flex">
-                    <img src="./images/icons/watch.png" alt="">
-                </div>
-                <div class="info">
-                    <hr>
-                    <h2>Watch</h2>
-                    <figcaption>300 SAR</figcaption>
-                </div>
-            </figure>
-            <figure class="hidden filterDiv accessories">
-                <div class="flex">
-                    <img src="./images/icons/watch.png" alt="">
-                </div>
-                <div class="info">
-                    <hr>
-                    <h2>Watch</h2>
-                    <figcaption>300 SAR</figcaption>
-                </div>
-            </figure>
-            <figure class="hidden filterDiv accessories">
-                <div class="flex">
-                    <img src="./images/icons/watch.png" alt="">
-                </div>
-                <div class="info">
-                    <hr>
-                    <h2>Watch</h2>
-                    <figcaption>300 SAR</figcaption>
-                </div>
-            </figure>
-            <figure class="hidden filterDiv accessories">
-                <div class="flex">
-                    <img src="./images/icons/watch.png" alt="">
-                </div>
-                <div class="info">
-                    <hr>
-                    <h2>Watch</h2>
-                    <figcaption>300 SAR</figcaption>
-                </div>
-            </figure>
-            <figure class="hidden filterDiv accessories">
-                <div class="flex">
-                    <img src="./images/icons/nose-clip.png" alt="">
-                </div>
-                <div class="info">
-                    <hr>
-                    <h2>Nose Clip</h2>
-                    <figcaption>300 SAR</figcaption>
-                </div>
-            </figure>
-            <figure class="hidden filterDiv accessories">
-                <div class="flex">
-                    <img src="./images/icons/nose-clip.png" alt="">
-                </div>
-                <div class="info">
-                    <hr>
-                    <h2>Nose Clip</h2>
-                    <figcaption>300 SAR</figcaption>
-                </div>
-            </figure>
-            <figure class="hidden filterDiv accessories">
-                <div class="flex">
-                    <img src="./images/icons/nose-clip.png" alt="">
-                </div>
-                <div class="info">
-                    <hr>
-                    <h2>Nose Clip</h2>
-                    <figcaption>300 SAR</figcaption>
-                </div>
-            </figure>
-            <figure class="hidden filterDiv accessories">
-                <div class="flex">
-                    <img src="./images/icons/nose-clip.png" alt="">
-                </div>
-                <div class="info">
-                    <hr>
-                    <h2>Nose Clip</h2>
-                    <figcaption>300 SAR</figcaption>
-                </div>
-            </figure>
-        </section>
+        <!-- About athletes -->
+        <article class="athletes hidden">
+            <div class="icon">
+                <img src="./images/personal/osama.png" alt="Osama">
+            </div>
+            <div class="info">
+                <h1>Osama</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eu lobortis elementum nibh tellus molestie nunc non blandit. Morbi enim nunc faucibus a pellentesque sit. Massa vitae tortor condimentum lacinia quis. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quam adipiscing vitae proin sagittis adipiscing nisl rhoncus mattis rhoncus urna.</p>
+            </div>
+        </article>
+        <hr>
+        <article class="athletes hidden">
+            <div class="icon">
+                <img src="./images/personal/ishaq.png" alt="Ishaq">
+            </div>
+            <div class="info">
+                <h1>Ishaq</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eu lobortis elementum nibh tellus molestie nunc non blandit. Morbi enim nunc faucibus a pellentesque sit. Massa vitae tortor condimentum lacinia quis. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quam adipiscing vitae proin sagittis adipiscing nisl rhoncus mattis rhoncus urna.</p>
+            </div>
+        </article>
+        <hr>
+        <article class="athletes hidden">
+            <div class="icon">
+                <img src="./images/personal/mariam.png" alt="Mariam">
+            </div>
+            <div class="info">
+                <h1>Mariam</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eu lobortis elementum nibh tellus molestie nunc non blandit. Morbi enim nunc faucibus a pellentesque sit. Massa vitae tortor condimentum lacinia quis. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quam adipiscing vitae proin sagittis adipiscing nisl rhoncus mattis rhoncus urna.</p>
+            </div>
+        </article>
     </main>
     <footer>
         <!-- Icon and social media links -->
@@ -334,8 +105,8 @@
                 <h2>Quick Links:</h2>
                 <nav class="flex">
                     <li><a href="./index.html">Home</a></li>
-                    <li><a href="./athletes.html">Athletes</a></li>
-                    <li><a href="#">Equipment</a></li>
+                    <li><a href="#">Athletes</a></li>
+                    <li><a href="./equipment.html">Equipment</a></li>
                     <li><a href="#">Courses</a></li>
                     <li><a href="#">Boat Trips</a></li>
                     <li><a href="#">Location</a></li>
@@ -356,6 +127,5 @@
         </div>
     </footer>
     <script src="./assets/js/main.js"></script>
-    <script>filterSelection("all")</script>
 </body>
 </html>
