--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
                     </div>
                 </div>
                 <ul class="menu">
-                    <li class="menu-item"><a href="#">About</a></li>
-                    <li class="menu-item"><a href="#">Equipment</a></li>
+                    <li class="menu-item"><a href="#">Home</a></li>
+                    <li class="menu-item"><a href="./athletes.html">Athletes</a></li>
+                    <li class="menu-item"><a href="./equipment.html">Equipment</a></li>
                     <li class="menu-item"><a href="#">Courses</a></li>
                     <li class="menu-item"><a href="#">Boat Trips</a></li>
                     <li class="menu-item"><a href="#">Location</a></li>
@@ -38,7 +39,8 @@
                 <div class="menu-row">
                     <a href="./index.html"><img src="./images/logo/logo-short.svg" alt=""></a>
                     <ul class="row-listed">
-                        <li><a href="#">About</a></li>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="./athletes.html">Athletes</a></li>
                         <li><a href="./equipment.html">Equipment</a></li>
                         <li><a href="#">Courses</a></li>
                         <li><a href="#">Boat Trips</a></li>
@@ -53,7 +55,7 @@
                 <h1>Jeddah Freediving</h1>
                 <span class="text-type" data-wait="1500" data-words='["Quality equipment", "Awesome insructors", "What are you waiting for!"]'></span>
                 <div class="buttons">
-                    <button onclick="location.href='#'" type="button"><span>Equiptment</span></button>
+                    <button onclick="location.href='./equipment.html'" type="button"><span>Equiptment</span></button>
                     <button onclick="location.href='#'" type="button"><span>Classes</span></button>
                 </div>
             </article>
@@ -61,32 +63,32 @@
     </header>
     <main>
         <!-- About athletes -->
-        <article class="athletes hidden">
-            <div class="icon">
-                <img src="./images/personal/osama.png" alt="Osama">
+        <article class="main hidden">
+            <div class="icon" style="background-image: url(./images/icons/athletes.png);">
+                <img src="./images/icons/athletes.png" alt="">
             </div>
             <div class="info">
-                <h1>Osama</h1>
+                <a href="./athletes.html"><h1>Our Athletes</h1></a>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eu lobortis elementum nibh tellus molestie nunc non blandit. Morbi enim nunc faucibus a pellentesque sit. Massa vitae tortor condimentum lacinia quis. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quam adipiscing vitae proin sagittis adipiscing nisl rhoncus mattis rhoncus urna.</p>
             </div>
         </article>
-        <hr>
-        <article class="athletes hidden">
-            <div class="icon">
-                <img src="./images/personal/ishaq.png" alt="Ishaq">
+        <div class="full-width-background">
+            <article class="main inverted hidden">
+                <div class="icon" style="background-image: url(./images/icons/equipment.jpg);">
+                    <img src="./images/icons/equipment.jpg" alt="">
+                </div>
+                <div class="info">
+                    <a href="./equipment.html"><h1>Equipment</h1></a>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eu lobortis elementum nibh tellus molestie nunc non blandit. Morbi enim nunc faucibus a pellentesque sit. Massa vitae tortor condimentum lacinia quis. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quam adipiscing vitae proin sagittis adipiscing nisl rhoncus mattis rhoncus urna.</p>
+                </div>
+            </article>
+        </div>
+        <article class="main hidden">
+            <div class="icon" style="background-image: url(./images/icons/courses.jpg);">
+                <img src="./images/icons/courses.jpg" alt="">
             </div>
             <div class="info">
-                <h1>Ishaq</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eu lobortis elementum nibh tellus molestie nunc non blandit. Morbi enim nunc faucibus a pellentesque sit. Massa vitae tortor condimentum lacinia quis. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quam adipiscing vitae proin sagittis adipiscing nisl rhoncus mattis rhoncus urna.</p>
-            </div>
-        </article>
-        <hr>
-        <article class="athletes hidden">
-            <div class="icon">
-                <img src="./images/personal/mariam.png" alt="Mariam">
-            </div>
-            <div class="info">
-                <h1>Mariam</h1>
+                <h1>Courses</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eu lobortis elementum nibh tellus molestie nunc non blandit. Morbi enim nunc faucibus a pellentesque sit. Massa vitae tortor condimentum lacinia quis. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quam adipiscing vitae proin sagittis adipiscing nisl rhoncus mattis rhoncus urna.</p>
             </div>
         </article>
@@ -106,7 +108,8 @@
             <div class="navigation">
                 <h2>Quick Links:</h2>
                 <nav class="flex">
-                    <li><a href="#">About</a></li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="./athletes.html">Athletes</a></li>
                     <li><a href="./equipment.html">Equipment</a></li>
                     <li><a href="#">Courses</a></li>
                     <li><a href="#">Boat Trips</a></li>
