segmented-js-and-changed-css-navigation-background

--- a/athletes.html
+++ b/athletes.html
@@ -127,5 +127,6 @@
         </div>
     </footer>
     <script src="./assets/js/main.js"></script>
+    <script src="./assets/js/typewriter.js"></script>
 </body>
 </html>
