--- a/equipment.html
+++ b/equipment.html
@@ -356,6 +356,7 @@
         </div>
     </footer>
     <script src="./assets/js/main.js"></script>
+    <script src="./assets/js/filter.js"></script>
     <script>filterSelection("all")</script>
 </body>
 </html>
