test-navigation-bar

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <li class="menu-item"><a href="./equipment.html">Equipment</a></li>
                     <li class="menu-item"><a href="#">Courses</a></li>
                     <li class="menu-item"><a href="#">Boat Trips</a></li>
-                    <li class="menu-item"><a href="#">Location</a></li>
+                    <li class="menu-item"><a href="./location.html">Location</a></li>
                 </ul>
                 <div class="menu-row">
                     <a href="./index.html"><img src="./images/logo/logo-short.svg" alt=""></a>
@@ -44,7 +44,7 @@
                         <li><a href="./equipment.html">Equipment</a></li>
                         <li><a href="#">Courses</a></li>
                         <li><a href="#">Boat Trips</a></li>
-                        <li><a href="#">Location</a></li>
+                        <li><a href="./location.html">Location</a></li>
                     </ul>
                 </div>
             </div>
@@ -113,7 +113,7 @@
                     <li><a href="./equipment.html">Equipment</a></li>
                     <li><a href="#">Courses</a></li>
                     <li><a href="#">Boat Trips</a></li>
-                    <li><a href="#">Location</a></li>
+                    <li><a href="./location.html">Location</a></li>
                 </nav>
             </div>
             <!-- Footer contact information -->
