--- a/index.html
+++ b/index.html
@@ -18,30 +18,30 @@
         </div>
     </div>
     <header>
-        <div class="top-navigation">
-            <div class="burger-container">
+        <div class="window">
+            <div class="header">
+              <div class="burger-container">
                 <div id="burger">
                   <div class="bar topBar"></div>
                   <div class="bar btmBar"></div>
                 </div>
-            </div>
-            <ul class="menu">
-                <li class="menu-item"><a href="#">About</a></li>
-                <li class="menu-item"><a href="#">Algorithms</a></li>
-                <li class="menu-item"><a href="#">Web Design</a></li>
-                <li class="menu-item"><a href="#">Games</a></li>
-            </ul>
-            <div class="content-container">
-                <img src="./images/logo/logo-white.svg" alt="">
-                <ul class="row-listed">
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Algorithms</a></li>
-                    <li><a href="#">Web Design</a></li>
-                    <li><a href="#">Games</a></li>
-                </ul>
+              </div>
+              <div class="icon icon-apple"></div>
+              <ul class="menu">
+                <li class="menu-item"><a href="#">Mac</a></li>
+                <li class="menu-item"><a href="#">iPad</a></li>
+                <li class="menu-item"><a href="#">iPhone</a></li>
+                <li class="menu-item"><a href="#">Watch</a></li>
+                <li class="menu-item"><a href="#">TV</a></li>
+                <li class="menu-item"><a href="#">Music</a></li>
+                <li class="menu-item"><a href="#">Support</a></li>
+              </ul>
+              <div class="shop icon icon-bag"></div>
             </div>
         </div>
-        <section class="banner">
+    </header>
+    <main>
+        <!-- <section class="banner">
             <article class="text">
                 <h1>Abdulrahman Jouhari</h1>
                 <span class="text-type" data-wait="1500" data-words='["Web Developer", "Graphic Designer", "Game Developer"]'></span>
@@ -50,10 +50,7 @@
                     <button onclick="location.href='#'" type="button"><span>Info</span></button>
                 </div>
             </article>
-        </section>
-    </header>
-    <main>
-
+        </section> -->
     </main>
     <footer>
 
