--- a/index.html
+++ b/index.html
@@ -18,15 +18,13 @@
         </div>
     </div>
     <header>
-        <div class="window">
-            <div class="header">
+            <div class="top-navigation">
               <div class="burger-container">
                 <div id="burger">
                   <div class="bar topBar"></div>
                   <div class="bar btmBar"></div>
                 </div>
               </div>
-              <div class="icon icon-apple"></div>
               <ul class="menu">
                 <li class="menu-item"><a href="#">Mac</a></li>
                 <li class="menu-item"><a href="#">iPad</a></li>
@@ -36,9 +34,7 @@
                 <li class="menu-item"><a href="#">Music</a></li>
                 <li class="menu-item"><a href="#">Support</a></li>
               </ul>
-              <div class="shop icon icon-bag"></div>
             </div>
-        </div>
     </header>
     <main>
         <!-- <section class="banner">
